--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,7 @@
 name: Publish NPM package
 on:
-  release:
-    types: [created]
+  push:
+    branches: [main]
 jobs:
   build:
     runs-on: ubuntu-latest
