feat: add README

--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "filter-npm-deps",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "",
+  "engines": {
+    "node": ">=18"
+  },
   "bin": {
     "filter-npm-deps": "./filter-npm-deps.mjs"
   },
