--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '20.x'
+          node-version: 20
           registry-url: 'https://registry.npmjs.org'
       - run: npm ci
       - run: npm publish
