--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,7 @@
 name: Publish NPM package
 on:
-  push:
-    branches: [main]
+  release:
+    types: [created]
 jobs:
   build:
     runs-on: ubuntu-latest
