--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "filter-npm-deps",
-  "version": "0.1.0",
-  "description": "",
+  "version": "0.1.1",
+  "description": "A convenient Node.js CLI script to filter and only keep a list of dependencies from your package.json",
   "engines": {
     "node": ">=18"
   },
@@ -10,7 +10,6 @@
   },
   "repository": "https://github.com/jase88/filter-npm-deps",
   "homepage": "https://github.com/jase88/filter-npm-deps#readme",
-  "author": "",
   "license": "MIT",
   "keywords": [
     "filter",
